Background and small fixes

--- a/abstract.tex
+++ b/abstract.tex
@@ -23,3 +23,9 @@ I test these learners on data that is modeled after linguistic phenomena such as
 The code for these evaluations is available as part of my Python package \emph{SigmaPie} \href{https://pypi.org/project/SigmaPie/}{\faCube} \citep{sigmapie}.
 
 The findings of my thesis allow linguists and formal language theorists to assess possible applications of subregular techniques and approaches, in particular typology, cognitive science, and natural language processing.
+
+\clearpage
+\thispagestyle{plain}
+\par\vspace*{.35\textheight}{\flushright \emph{There is a single light of science, and \\ to brighten it anywhere is to brighten it everywhere.}\par
+--- Isaac Asimov
+\par}
