--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -56,7 +56,7 @@ We hitchhiked in Armenia, literally invited troubles in Georgia, and did a lot o
 I enjoyed them all.
 Nastya Ivanova, ptenz, you are a very special one.
 We went together through so much, and I still remember the comfort of your couch that was to me like home.
-For fantastic memories and conversations, I am grateful to Masha Borodavchenko, Julia Trishankova, Nastya Serebryannikova, Amanda Ritchart-Scott, Kyle Gorman, Kevin McMullin, Charles Reiss, Mati Pentus, Maxime Papillon, Dionysia Saratsli, Ildi Szab\'o, Felix Keppler, Abhishek De, Kabilan Ramkumar, Borya Danilin, Ozer Kelgembaitegin, Zula Artykbaev, and Katie DeAngelis.
+For fantastic memories and conversations, I am grateful to Masha Borodavchenko, Julia Trishankova, Nastya Serebryannikova, Amanda Ritchart-Scott, Kyle Gorman, Kevin McMullin, Adam Jardine, Jane Chandlee, Charles Reiss, Mati Pentus, Maxime Papillon, Dionysia Saratsli, Ildi Szab\'o, Felix Keppler, Abhishek De, Kabilan Ramkumar, Borya Danilin, Ozer Kelgembaitegin, Zula Artykbaev, and Katie DeAngelis.
 
 The final words of thank you go to my family.
 Henrick Goldwurm, thank you for making these years happy.
