--- a/aksbib.bib
+++ b/aksbib.bib
@@ -671,6 +671,15 @@ publisher = {Academic Press, Inc.}
 }
 
 
+@misc{Goldberg2018,
+  author = {Paul Goldberg},
+  title = {{MS}c Foundations of Computer Science},
+  year = {2018},
+  howpublished = "\url{http://www.cs.ox.ac.uk/people/paul.goldberg/FCS/}",
+  note = {Course materials; slides 3 on undecidability}
+}
+
+
 @InCollection{GraciaFullana2000,
   author =       {Gr{\'a}cia, Llu{\"i}sa and Olga Fullana},
   title =        {Catalan verbal compounds: Internal order and argument interpretation},
@@ -851,6 +860,17 @@ isbn="978-3-662-53042-9",
   title = {The Vowel Harmony Calculator},
   year = {2004},
   note = {Website. Swarthmore College.}
+}
+
+
+@article{HartmanisShank1968,
+  author = {Juris Hartmanis and Herbert Shank},
+  title = {On the recognition of primes by automata},
+  year = {1968},
+  journal = {Journal of the Association for Computing Machinery},
+  volume = {15},
+  number = {3},
+  pages = {382--389}
 }
 
 
@@ -1599,6 +1619,16 @@ using Finite-State Transducers},
   volume = {16},
   number = {1},
   pages = {69-88}
+}
+
+@inproceedings{MoradiAksenovaGraf2019,
+  author = {Moradi, Sedigheh and Aks\"{e}nova, Al\"{e}na and Graf, Thomas},
+  title = {The computational cost of generalizations: An example from micromorphology},
+  booktitle = {Proceedings of the Society for Computation in Linguistics},
+  year = {2019},
+  volume = {2},
+  address = {New York, NY},
+  pages = {367-368}
 }
 
 @book{Nanaev1950,
