--- a/conclusion.tex
+++ b/conclusion.tex
@@ -209,7 +209,7 @@ In this abridged format, a success (\faThumbsOUp) indicates that the learner ach
 \\ \hline
 \end{tabular}}
 \caption{Learning results that were experimentally obtained in this dissertation.
-Black cells indicate that the experiments were not conducted due to the reasons discussed in \ref{omittedexpsection}.}
+Black cells indicate that the experiments were not conducted due to the reasons discussed in Section \ref{omittedexpsection}.}
 \label{thesisresults}
 \end{table}
 
