--- a/languages.tex
+++ b/languages.tex
@@ -1948,7 +1948,7 @@ $\langle b, \{a\}, c \rangle$, and
 $\langle b, \{\}, c \rangle$.
 
 
-\begin{algorithm}
+\begin{algorithm}[h!]
 \caption{Extracts $G_{MTSL_{2}}$ from $I$}
 \begin{algorithmic}
 \REQUIRE a finite input sample $I \in \Sigma^*$
